# operator

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  __main__.py  agent-context.md  app.py  audio_capture.swift  benchmark_record.py  benchmark_results.json  benchmark_results_docker.json  benchmark_stt.py  benchmark_stt_results.json  brainchild  caldav_poller.py  calendar_join.py  calendar_poller.py  capture_clips.py  config.py  config.yaml  next-steps.md  operator  product-strategy.md  pyproject.toml  refactor-plan.md  requirements.txt  run_linux.py  setup.py  spec.md  test_api_keys.py  test_calendar.py
agents/: README.md
bench_results/: latency.json  quality_scores.json  streaming.json
benchmark_clips/: ground_truth.json  ground_truth.txt
benchmarks/: benchmark_record.py  benchmark_stt.py
connectors/: __init__.py  base.py  captions_adapter.py  captions_js.py  docker_adapter.py  linux_adapter.py  macos_adapter.py  session.py  terminal.py
debug/: admit_diagnostic.html  flaky_mcp_server.py  headless_meet_baseline.py  headless_meet_captions.py  headless_meet_invited.py  headless_meet_join.py  headless_meet_send.py  model-log.md  post_admit_pill_persisted.html  post_admit_success.html  pre_camera_toggle.html
docker/: Dockerfile  Dockerfile.bench  entrypoint.py  pulse_setup.sh
docs/: 11_3_a_testing.md  11_3_b_testing.md  11_4_testing.md  agent-context.md  caption-timing-findings.md  claude-use-cases.md  deferred-live-tests.md  delegate_multi_repo_spec.md  handoff.md  latency.md  live-skill-tests.md  mcp-auth-errors.md  mcp-pressure-test.md  model-log.md  mvp-bar.md  oss-audit-plan.md  oss-audit-report.md  permission-mcp-spike.md  plan.md  race-condition-audit.md  roadmap.md  security-audit-session.md  security-audit.md  security.md  test-plan.md  ui-dependency-audit.md
pipeline/: audio.py  build_card.py  calendar_poller.py  captions.py  chat_runner.py  conversation.py  face.py  fillers.py  guardrails.py  latency_probe.py  llm.py  mcp_client.py  meeting_record.py  picker.py  runner.py  sanitize.py  setup.py  skills.py  transcript.py  tts.py  ui.py  wake.py
roster/: README.md
scripts/: audit_fillers.py  auth_export.py  bench_tts.py  chat_dom_probe.js  check_auth.py  gen_fillers.py  generate_backchannel.py  linux_setup.sh  parse_latency.py  probe_screenshot.py  run_linux.py  spike_chat_dom.py  spike_message_dom.py  test_asr_lag.py  test_chat_io.py
(+190 files in other folders)
